@@ -1,8 +1,9 @@
 tactile (4.2.0-0) unstable; urgency=low
 
   * Fixed minor spelling errors
+  * Added sound effects to pixel coordinates quiz scene
 
- -- Team Kano <dev@kano.me>  Thu, 4 Oct 2018 11:36:37 +0100
+ -- Team Kano <dev@kano.me>  Fri, 5 Oct 2018 11:36:37 +0100
 
 tactile (4.1.0-0) unstable; urgency=low
 
